fixing error that was effecting layout on mobile

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,7 +1,3 @@
-.intro-container {
-    height: 100vh;
-}
-
 .intro-background {
     height: 85vh;
     width: 100wh;
